--- a/views/index.pug
+++ b/views/index.pug
@@ -97,6 +97,16 @@ html
     if !currentUser
       +authModals()
     .container
+      .mt-4.coming-soon
+        hr
+        .d-flex.justify-content-evenly
+          img.coming-soon-firm(src="/images/anafartalarturizm.png" alt="Anafartalar Turizm")
+          img.coming-soon-firm(src="/images/baltur.png" alt="Baltur")
+          img.coming-soon-firm(src="/images/bantur.png" alt="Bantur")
+          img.coming-soon-firm(src="/images/gozdeturizm.png" alt="Gözde Turizm")
+          img.coming-soon-firm(src="/images/vipgozdeturizm.png" alt="Gözde Turizm")
+        p.ms-3 Çok Yakında Sizlerle...
+        hr
       .d-flex.gap-3.mt-4
         .attribute.d-flex.flex-column
           img.attributes_icon(src="/svg/customer_service_icon.svg" alt="Çözümcü Online Destek")
