--- a/views/index.pug
+++ b/views/index.pug
@@ -105,7 +105,11 @@ html
           img.coming-soon-firm(src="/images/bantur.png" alt="Bantur")
           img.coming-soon-firm(src="/images/gozdeturizm.png" alt="Gözde Turizm")
           img.coming-soon-firm(src="/images/vipgozdeturizm.png" alt="Gözde Turizm")
-        p.ms-3 Çok Yakında Sizlerle...
+        .coming-soon-marquee.ms-3
+          .marquee.marquee--rtl
+            span Çok Yakında Sizlerle...
+          .marquee.marquee--ltr
+            span Çok Yakında Sizlerle...
         hr
       .d-flex.gap-3.mt-4
         .attribute.d-flex.flex-column
