--- a/views/index.pug
+++ b/views/index.pug
@@ -99,6 +99,9 @@ html
     .container
       .mt-4.coming-soon
         hr
+        .coming-soon-marquee.ms-3
+          .marquee.marquee--rtl
+            p.w-100.m-0 Çok Yakında Sizlerle...
         .d-flex.justify-content-evenly
           img.coming-soon-firm(src="/images/anafartalarturizm.png" alt="Anafartalar Turizm")
           img.coming-soon-firm(src="/images/baltur.png" alt="Baltur")
@@ -106,10 +109,8 @@ html
           img.coming-soon-firm(src="/images/gozdeturizm.png" alt="Gözde Turizm")
           img.coming-soon-firm(src="/images/vipgozdeturizm.png" alt="Gözde Turizm")
         .coming-soon-marquee.ms-3
-          .marquee.marquee--rtl
-            span Çok Yakında Sizlerle...
           .marquee.marquee--ltr
-            span Çok Yakında Sizlerle...
+            p.w-100.text-end.m-0 Çok Yakında Sizlerle...
         hr
       .d-flex.gap-3.mt-4
         .attribute.d-flex.flex-column
