--- a/views/index.pug
+++ b/views/index.pug
@@ -135,10 +135,23 @@ html
           p Herkes fırsatı sever, biz de biliyoruz. Size özel indirimler ve kampanyalarla seyahatlerinizi daha ekonomik hale getiriyoruz. Avantajlı biletler her zaman elinizin altında.
       if promoRoutes && promoRoutes.length
         .attribute-routes.mt-4
-          h5.text-uppercase.text-secondary Küçük Bir İlham
-          ul.list-unstyled.mb-0
+          .attribute-routes__header.d-flex.align-items-center.justify-content-between
+            h5.text-uppercase.text-secondary.mb-0 Küçük Bir İlham
+            span.attribute-routes__badge Trend Rotalar
+          p.attribute-routes__lead.mb-4 Keşfetmeye hazır mısınız? Sizin için seçtiğimiz popüler güzergâhlardan ilham alın.
+          ul.list-unstyled.mb-0.attribute-routes__grid
             each route in promoRoutes
-              li.fw-semibold #{route.fromTitle} - #{route.toTitle} => #{route.formattedPrice}₺'den başlayarak
+              li.attribute-route
+                .attribute-route__destinations
+                  span.attribute-route__city #{route.fromTitle}
+                  i.fa-solid.fa-arrow-right-long.mx-2
+                  span.attribute-route__city #{route.toTitle}
+                .attribute-route__meta
+                  span.attribute-route__tag Rotanı Planla
+                  span.attribute-route__price
+                    span.attribute-route__price-value #{route.formattedPrice}
+                    span.attribute-route__price-currency ₺
+                    span.attribute-route__price-note 'den başlayan
   script(src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js")
   script(src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.3/js/bootstrap.bundle.min.js")
   script(src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.0/js/all.min.js")
