--- a/views/index.pug
+++ b/views/index.pug
@@ -146,7 +146,7 @@ html
                   i.fa-solid.fa-arrow-right-long.mx-2
                   span.attribute-route__city #{route.toTitle}
                 .attribute-route__meta
-                  span.attribute-route__tag Rotanı Planla
+                  span.attribute-route__tag Seferleri Gör
                   span.attribute-route__price
                     span.attribute-route__price-value #{route.formattedPrice}
                     span.attribute-route__price-currency ₺
