--- a/views/layout.pug
+++ b/views/layout.pug
@@ -3,6 +3,7 @@ include components/auth-modals
 <!DOCTYPE html>
 html
   head
+    block head
     title= title
     link(rel="icon" type="image/png" sizes="32x32" href="/images/favicon-32x32.png")
     link(rel="icon" type="image/png" sizes="16x16" href="/images/favicon-16x16.png")
