--- a/public/css/trips.css
+++ b/public/css/trips.css
@@ -207,6 +207,7 @@
     padding: 1.2rem 5rem;
     gap: 1rem;
     margin: 1rem 0;
+    user-select: none;
 }
 
 .trip-search_field {
@@ -236,10 +237,8 @@
     padding-top: 1.75rem;
 }
 
-.trip-search_change i {
-    border: 2px solid rgba(248, 250, 252, 0.65);
-    border-radius: 50%;
-    padding: 0.5rem;
+.trip-search_change svg {
+    cursor: pointer;
 }
 
 .trip-search .place-select {
