--- a/views/blog-list.pug
+++ b/views/blog-list.pug
@@ -4,23 +4,38 @@ block css
   link(rel='stylesheet' href='/css/blog.css')
 
 block content
-    .container.mt-5
-        h1.mb-4 Blog Yazıları
+    section.blog-hero
+        .container
+            span.blog-hero-kicker Blog
+            h1.blog-hero-title İlham Veren Yazılar
+            p.blog-hero-subtitle Seyahat planına eşlik edecek güncel ipuçları, hikâyeler ve rehberler.
 
-        if posts.length
-            each post in posts
-                .blog-card.mb-4
-                    if post.coverImage
-                        img.cover(src=`/blog/images/${post.coverImage}` alt=post.title)
-                    h2
-                        a(href=`/blog/${post.slug}`)= post.title
-                    if post.description
-                        p.excerpt= post.description
-                    .meta
-                        span.date= post.createdAt.toLocaleDateString("tr-TR")
-                        if post.tags.length
-                            ul.tags
-                                each tag in post.tags
-                                    li.tag #{tag.trim()}
-        else
-            p Henüz blog yazısı bulunmuyor.
+    section.blog-listing
+        .container
+            if posts.length
+                .row.g-4
+                    each post in posts
+                        .col-md-6.col-lg-4
+                            article.blog-card.h-100
+                                if post.coverImage
+                                    a.blog-card-cover(href=`/blog/${post.slug}`)
+                                        img(src=`/blog/images/${post.coverImage}` alt=post.title)
+                                .blog-card-body
+                                    span.blog-card-date= post.createdAt.toLocaleDateString("tr-TR")
+                                    h2.blog-card-title
+                                        a(href=`/blog/${post.slug}`)= post.title
+                                    if post.description
+                                        p.blog-card-excerpt= post.description
+                                .blog-card-footer
+                                    .blog-card-meta
+                                        span.meta-item
+                                            i.fa-solid.fa-eye
+                                            |  #{post.viewCount || 0} okunma
+                                    if post.tags.length
+                                        ul.blog-card-tags
+                                            each tag in post.tags
+                                                li.blog-card-tag #{tag.trim()}
+            else
+                .empty-state
+                    h2 Henüz blog yazısı bulunmuyor.
+                    p Yeni yazılar için takipte kalın!
